# adk-samples

./: .gitignore
python/agents/RAG/: READING_AGENT_SPEC.md  all_cpt_codes.csv  check_models.py  cpt_119_126_chapter.jsonl  cpt_127_160_chapter.jsonl  cpt_39_62_chapter.json  cpt_64_65_chapter.json  cpt_66_74_chapter_pro.json  cpt_75_80_chapter.json  cpt_81_94_chapter.jsonl  cpt_95_118_chapter.jsonl  list_publisher_models.py  pyproject copy.toml  test_rag_gemini3.py  test_rag_genai_lib.py  test_rag_new_sdk.py
python/agents/RAG/rag/: agent.py  prompts.py
python/agents/RAG/rag/shared_libraries/: cpt_extractor.py  epub_navigator.py  json_to_csv.py  jsonl_to_csv.py  prepare_epub.py
python/agents/RAG/rag_tools_package/: .env.example  READING_AGENT_JSON_SPEC.md  READING_AGENT_PLAN.MD  README.md  pyproject.toml
python/agents/RAG/rag_tools_package/cpt_output/: cpt_1_1_chapter.jsonl  cpt_63_63_chapter_orig.json  cpt_63_63_chapter_orig.jsonl  cpt_76_78_chapter.json  cpt_79_80_chapter.json
python/agents/RAG/rag_tools_package/scripts/: convert_results.py  extract_cpt.py  upload_rag_docs.py
python/agents/RAG/rag_tools_package/source/: CPT Professional 2024 American Medical Association.epub.pagemap.json
python/agents/RAG/rag_tools_package/src/rag_tools/: config.py
python/agents/RAG/rag_tools_package/src/rag_tools/cpt/: extractor.py
python/agents/RAG/rag_tools_package/src/rag_tools/ingestion/: pdf_uploader.py
python/agents/RAG/rag_tools_package/src/rag_tools/utils/: converters.py  pricing.py
